--- a/views/home.hbs
+++ b/views/home.hbs
@@ -35,10 +35,10 @@
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
       <td class="text-end">
-        <a href="/viewuser/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i> View</a>
-        <a href="/edituser/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i>
+        <a href="/viewuser/{{this.id}}" type="button" class="btn btn-light btn-sm"><i class="bi bi-eye"></i> View</a>
+        <a href="/edituser/{{this.id}}" type="button" class="btn btn-light btn-sm"><i class="bi bi-pencil"></i>
           Edit</a>
-        <a href="/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i> Delete</a>
+        <a href="/{{this.id}}" type="button" class="btn btn-light btn-sm"><i class="bi bi-person-x"></i> Delete</a>
       </td>
     </tr>
     {{/each}}
